--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./style.css" />
     <title>The Basic Language of the Web: HTML</title>
   </head>
 
@@ -24,6 +25,7 @@
         <a href="#">Flexbox</a>
         <a href="#">CSS Grid</a>
       </nav>
+      <p>Test paragraph</p>
     </header>
 
     <article>
@@ -141,6 +143,6 @@
       </ul>
     </aside>
 
-    <footer>Copyright &copy; 2027 by The Code Magazine.</footer>
+    <footer><p>Copyright &copy; 2027 by The Code Magazine.</p></footer>
   </body>
 </html>
