--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -100,7 +100,9 @@
       </p>
 
       <ul>
-        <li class="first-li">To be able to use the fundamental web dev language</li>
+        <li class="first-li">
+          To be able to use the fundamental web dev language
+        </li>
         <li>
           To hand-craft beautiful websites instead of relying on tools like
           Worpress or Wix
@@ -146,7 +148,9 @@
     </aside>
 
     <footer>
-      <p id="copyright">Copyright &copy; 2027 by The Code Magazine.</p>
+      <p id="copyright" class="copyright text">
+        Copyright &copy; 2027 by The Code Magazine.
+      </p>
     </footer>
   </body>
 </html>
