--- a/starter/02-HTML-Fundamentals/challenge2/index.html
+++ b/starter/02-HTML-Fundamentals/challenge2/index.html
@@ -2,36 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Challenge #2</title>
   </head>
 
   <body>
-    <article>
-      <h2>Converse Chuck Taylor All Star Low Top</h2>
+    <article class="product">
+      <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
       <img
         src="../img/challenges.jpg"
         alt="Converse Chuck Taylor All Star Low Top"
         height="250"
         width="250"
       />
-      <p><strong>$65.00</strong></p>
-      <p>Free shipping</p>
+      <p class="price"><strong>$65.00</strong></p>
+      <p class="shipping">Free shipping</p>
       <p>
         Ready to dress up or down, these classc canvas Chucks are an everyday
         wardrope staple.
       </p>
       <p>
-        <a href="https://www.converse.com/dk/en/go?lang=en_DK"
+        <a class="more-info" href="https://www.converse.com/dk/en/go?lang=en_DK"
           >More information &rarr;</a
         >
       </p>
-      <h3>Product details</h3>
-      <ul>
+      <h3 class="details-title">Product details</h3>
+      <ul class="details-list">
         <li>Lightweight, durable canvas sneaker</li>
         <li>Lightly padded footbed for added confort</li>
         <li>Iconic Chuck Taylor ankle patch</li>
       </ul>
-      <button>Add to cart</button>
+      <button class="add-cart">Add to cart</button>
     </article>
   </body>
 </html>
