--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -20,12 +20,12 @@
       <h1>📘 The Code Magazine</h1>
 
       <nav>
+        <!-- <strong>This is the navigation</strong> -->
         <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
         <a href="#">Flexbox</a>
         <a href="#">CSS Grid</a>
       </nav>
-      <p>Test paragraph</p>
     </header>
 
     <article>
