--- a/starter/02-HTML-Fundamentals/challenge2/index.html
+++ b/starter/02-HTML-Fundamentals/challenge2/index.html
@@ -17,7 +17,7 @@
       />
       <p class="price"><strong>$65.00</strong></p>
       <p class="shipping">Free shipping</p>
-      <p>
+      <p class="description">
         Ready to dress up or down, these classc canvas Chucks are an everyday
         wardrope staple.
       </p>
