--- a/starter/03-CSS-Fundamentals/index.html
+++ b/starter/03-CSS-Fundamentals/index.html
@@ -26,6 +26,7 @@
           <a href="#">Flexbox</a>
           <a href="#">CSS Grid</a>
         </nav>
+        <button>❤ Like</button>
       </header>
 
       <article>
@@ -125,7 +126,7 @@
               src="img/related-1.jpg"
               alt="Person programming"
               width="75"
-              width="75"
+              height="75"
             />
             <a href="#">How to Learn Web Development</a>
             <p class="related-author">By Jonas Schmedtmann</p>
@@ -135,7 +136,7 @@
               src="img/related-2.jpg"
               alt="Lightning"
               width="75"
-              heigth="75"
+              height="75"
             />
             <a href="#">The Unknown Powers of CSS</a>
             <p class="related-author">By Jim Dillon</p>
