--- a/starter/02-HTML-Fundamentals/challenge2/index.html
+++ b/starter/02-HTML-Fundamentals/challenge2/index.html
@@ -17,15 +17,22 @@
       />
       <p class="price"><strong>$65.00</strong></p>
       <p class="shipping">Free shipping</p>
+      <p class="sale">SALE</p>
       <p class="description">
         Ready to dress up or down, these classc canvas Chucks are an everyday
         wardrope staple.
       </p>
-      <p>
-        <a class="more-info" href="https://www.converse.com/dk/en/go?lang=en_DK"
-          >More information &rarr;</a
-        >
-      </p>
+      <a class="more-info" href="https://www.converse.com/dk/en/go?lang=en_DK"
+        >More information &rarr;</a
+      >
+      <div>
+        <div class="color black"></div>
+        <div class="color blue"></div>
+        <div class="color red"></div>
+        <div class="color yellow"></div>
+        <div class="color green"></div>
+        <div class="color brown"></div>
+      </div>
       <h3 class="details-title">Product details</h3>
       <ul class="details-list">
         <li>Lightweight, durable canvas sneaker</li>
