--- a/starter/04-CSS-Layouts/flexbox.html
+++ b/starter/04-CSS-Layouts/flexbox.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flexbox</title>
     <style>
+      .el {
+        flex-grow: 1;
+        flex-shrink: 1;
+        /* flex-basis: 100px; */
+      }
       .el--1 {
         background-color: blueviolet;
         align-self: flex-start;
@@ -23,11 +28,9 @@
       .el--5 {
         background-color: palevioletred;
         align-self: stretch;
-        order: 1;
       }
       .el--6 {
         background-color: steelblue;
-        order: -1;
       }
       .el--7 {
         background-color: yellow;
@@ -40,14 +43,14 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 34px;
+        font-size: 35px;
         margin: 40px;
 
         /* FLEXBOX */
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        gap: 50px;
+        gap: 10px;
       }
     </style>
   </head>
@@ -58,9 +61,9 @@
       <div class="el el--3">CSS</div>
       <div class="el el--4">are</div>
       <div class="el el--5">amazing</div>
-      <div class="el el--6">languages</div>
-      <div class="el el--7">to</div>
-      <div class="el el--8">learn</div>
+      <!-- <div class="el el--6">languages</div> -->
+      <!-- <div class="el el--7">to</div>
+      <div class="el el--8">learn</div> -->
     </div>
   </body>
 </html>
