--- a/starter/02-HTML-Fundamentals/challenge2/index.html
+++ b/starter/02-HTML-Fundamentals/challenge2/index.html
@@ -9,18 +9,21 @@
   <body>
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
-          <img
-            src="../img/challenges.jpg"
-            alt="Converse Chuck Taylor All Star Low Top"
-            height="250"
-            width="250"
-            class="product-img"
-          />
+      <div class="container">
+        <img
+          src="../img/challenges.jpg"
+          alt="Converse Chuck Taylor All Star Low Top"
+          height="250"
+          width="250"
+          class="product-img"
+        />
         <div class="product-info">
-          <p class="price"><strong>$65.00</strong></p>
-          <p class="shipping">Free shipping</p>
-          <p class="sale">SALE</p>
-          <p class="description">
+          <div class="product-price">
+            <p class="price"><strong>$65.00</strong></p>
+            <p class="shipping">Free shipping</p>
+          </div>
+          <p class="sale">Sale</p>
+          <p class="product-description">
             Ready to dress up or down, these classc canvas Chucks are an
             everyday wardrope staple.
           </p>
@@ -29,7 +32,7 @@
             href="https://www.converse.com/dk/en/go?lang=en_DK"
             >More information &rarr;</a
           >
-          <div>
+          <div class="product-colors">
             <div class="color black"></div>
             <div class="color blue"></div>
             <div class="color red"></div>
@@ -46,6 +49,7 @@
             <li>Iconic Chuck Taylor ankle patch</li>
           </ul>
         </div>
+      </div>
       <button class="add-cart">Add to cart</button>
     </article>
   </body>
