--- a/starter/04-CSS-Layouts/css-grid.html
+++ b/starter/04-CSS-Layouts/css-grid.html
@@ -32,36 +32,67 @@
         background-color: crimson;
       }
 
+      /* .el--2 {
+        grid-column: 1/3;
+        grid-row: 2;
+      }
+
+      .el--8 {
+        grid-column: 1/3;
+        grid-row: 1/2;
+      }
+
+      .el--3 {
+        grid-column: 3;
+        grid-row: 1 / span 2;
+      } */
+
       .container--1 {
         /* STARTER */
+        display: none;
         font-family: sans-serif;
         background-color: #ddd;
         font-size: 30px;
         margin: 40px;
 
         /* CSS GRID */
-        display: grid;
-        grid-template-columns: 200px 250px 100px 100px;
-        grid-template-rows: 300px 200px;
+        /* display: grid; */
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr;
 
         /* gap: 30px; */
-        column-gap: 30px;
-        row-gap: 60px;
+        column-gap: 20px;
+        row-gap: 20px;
       }
 
       .container--2 {
-        display: none;
-
         /* STARTER */
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+
+        /* Aligning tracks inside container */
+        justify-content: center;
+        align-content: center;
+
+        /* Aligning items inside cells */
+        align-items: center;
+        justify-items: center;
+      }
+
+      .el--3 {
+        align-self: end;
+        justify-self: end;
       }
     </style>
   </head>
@@ -73,7 +104,7 @@
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
+      <!-- <div class="el el--7">(7) to</div> -->
       <div class="el el--8">(8) learn</div>
     </div>
 
