--- a/starter/02-HTML-Fundamentals/challenge2/index.html
+++ b/starter/02-HTML-Fundamentals/challenge2/index.html
@@ -9,47 +9,45 @@
   <body>
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
-      <div class="container">
-        <img
-          src="../img/challenges.jpg"
-          alt="Converse Chuck Taylor All Star Low Top"
-          height="250"
-          width="250"
-          class="product-img"
-        />
-        <div class="product-info">
-          <div class="product-price">
-            <p class="price"><strong>$65.00</strong></p>
-            <p class="shipping">Free shipping</p>
-          </div>
-          <p class="sale">Sale</p>
-          <p class="product-description">
-            Ready to dress up or down, these classc canvas Chucks are an
-            everyday wardrope staple.
-          </p>
-          <a
-            class="more-info"
-            href="https://www.converse.com/dk/en/go?lang=en_DK"
-            >More information &rarr;</a
-          >
-          <div class="product-colors">
-            <div class="color black"></div>
-            <div class="color blue"></div>
-            <div class="color red"></div>
-            <div class="color yellow"></div>
-            <div class="color green"></div>
-            <div class="color brown"></div>
-          </div>
+      <!-- <div class="container"> -->
+      <img
+        src="../img/challenges.jpg"
+        alt="Converse Chuck Taylor All Star Low Top"
+        height="250"
+        width="250"
+        class="product-img"
+      />
+      <div class="product-info">
+        <div class="product-price">
+          <p class="price"><strong>$65.00</strong></p>
+          <p class="shipping">Free shipping</p>
         </div>
-        <div class="product-details">
-          <h3 class="details-title">Product details</h3>
-          <ul class="details-list">
-            <li>Lightweight, durable canvas sneaker</li>
-            <li>Lightly padded footbed for added confort</li>
-            <li>Iconic Chuck Taylor ankle patch</li>
-          </ul>
+        <p class="sale">Sale</p>
+        <p class="product-description">
+          Ready to dress up or down, these classc canvas Chucks are an everyday
+          wardrope staple.
+        </p>
+        <a class="more-info" href="https://www.converse.com/dk/en/go?lang=en_DK"
+          >More information &rarr;</a
+        >
+        <div class="product-colors">
+          <div class="color black"></div>
+          <div class="color blue"></div>
+          <div class="color red"></div>
+          <div class="color yellow"></div>
+          <div class="color green"></div>
+          <div class="color brown"></div>
         </div>
       </div>
+      <div class="product-details">
+        <h3 class="details-title">Product details</h3>
+        <ul class="details-list">
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded footbed for added confort</li>
+          <li>Iconic Chuck Taylor ankle patch</li>
+        </ul>
+      </div>
+      <!-- </div> -->
       <button class="add-cart">Add to cart</button>
     </article>
   </body>
