--- a/starter/06-Components/04-pagination.html
+++ b/starter/06-Components/04-pagination.html
@@ -8,12 +8,86 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="style.css" /> -->
     <title>Pagination component</title>
-    <!-- <style></style> -->
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      /* Cannot use 'margin: 100px auto' since no width is defined */
+
+      body {
+        font-family: 'inter', sans-serif;
+        color: #343a40;
+        line-height: 1;
+        display: flex;
+        justify-content: center;
+      }
+
+      .btn {
+        border: 1px solid #087f5b;
+        height: 48px;
+        width: 48px;
+        border-radius: 50%;
+        background: none; /* remove the default button background */
+        cursor: pointer;
+      }
+
+      .btn:hover {
+        background-color: #087f5b;
+        color: #fff;
+      }
+
+      /* Makes the icon itself turn white, when the button is hovered, not when the icon is hovered */
+
+      .btn:hover .btn-icon {
+        stroke: #fff;
+      }
+
+      .btn-icon {
+        height: 24px;
+        width: 24px;
+        stroke: #087f5b;
+      }
+
+      .pagination {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+      }
+
+      .page-link:link,
+      .page-link:visited {
+        font-size: 18px;
+        color: #343a40;
+        text-decoration: none;
+        height: 36px;
+        width: 36px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+      }
+
+      /* Using and-selector (.) to increase specificity of page-link-current */
+
+      .page-link:hover,
+      .page-link:active,
+      .page-link.page-link-current {
+        background-color: #087f5b;
+        color: #fff;
+      }
+
+      .dots {
+        color: #868e96;
+      }
+    </style>
   </head>
   <body>
-    <div class="container">
+    <div class="pagination">
       <button class="btn">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -30,15 +104,15 @@
           />
         </svg>
       </button>
-      <a class="btn-link" href="#" alt="1">1</a>
-      <a class="btn-link" href="#" alt="1">1</a>
-      <a class="btn-link" href="#" alt="2">2</a>
-      <a class="btn-link" href="#" alt="3">3</a>
-      <a class="btn-link" href="#" alt="4">4</a>
-      <a class="btn-link" href="#" alt="5">5</a>
-      <a class="btn-link" href="#" alt="6">6</a>
-      <span class="btn-link">...</span>
-      <a class="btn-link" href="#" alt="23">23</a>
+      <a class="page-link" href="#" alt="1">1</a>
+      <a class="page-link" href="#" alt="1">1</a>
+      <a class="page-link" href="#" alt="2">2</a>
+      <a class="page-link page-link-current" href="#" alt="3">3</a>
+      <a class="page-link" href="#" alt="4">4</a>
+      <a class="page-link" href="#" alt="5">5</a>
+      <a class="page-link" href="#" alt="6">6</a>
+      <span class="dots">...</span>
+      <a class="page-link" href="#" alt="23">23</a>
       <button class="btn">
         <svg
           xmlns="http://www.w3.org/2000/svg"
