--- a/starter/06-Components/06-app-layout.html
+++ b/starter/06-Components/06-app-layout.html
@@ -4,8 +4,112 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
     <title>App Layout</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: sans-serif;
+        color: #343a40;
+        font-size: 24px;
+
+        display: grid;
+        grid-template-columns: 80px 400px 1fr 250px;
+        grid-template-rows: 80px 1fr;
+
+        height: 100vh;
+        text-align: center;
+        font-weight: bold;
+      }
+
+      nav,
+      section,
+      main,
+      aside {
+        padding-top: 24px;
+      }
+
+      nav {
+        background-color: #343a40;
+        color: #fff;
+
+        grid-column: 1/2;
+        grid-row: 1/-1;
+      }
+
+      menu {
+        background-color: #7048e8;
+
+        grid-column: 2/-1;
+        grid-row: 1/2;
+
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        padding: 0 40px;
+      }
+
+      button {
+        display: inline-block;
+        font-size: 16px;
+        font-weight: bold;
+        background-color: #5f3dc4;
+        border: none;
+        cursor: pointer;
+        color: #fff;
+        padding: 8px 12px;
+      }
+
+      button:last-child {
+        background-color: #d6336c;
+        margin-left: auto; /* Moves last button to the right! */
+      }
+
+      section {
+        background-color: #e9ecef;
+        padding: 40px;
+
+        grid-column: 2/3;
+        grid-row: 2/3;
+
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+
+        overflow: scroll; /* Remember to set flex-shrink to ZERO! */
+        overflow-x: hidden; /* Hides the vertical scrollbar */
+      }
+
+      .email {
+        background-color: #adb5bd;
+        height: 96px;
+
+        /* To center the text */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        /* To activate 'overflow: scroll' on container */
+        flex-shrink: 0;
+      }
+
+      aside {
+        background-color: #e9ecef;
+
+        grid-column: 4/5;
+        grid-row: 2/3;
+      }
+
+      main {
+        grid-column: 3/4;
+        grid-row: 2/3;
+      }
+    </style>
   </head>
   <body>
     <nav>Nav</nav>
